force-app/main/default/objects/Region_Alias__c/Region_Alias__c.object-meta.xml
<CustomObject>
    <label>Region Alias</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Region Alias Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Region Alias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>