force-app/main/default/objects/Region_Alias__c/fields/RM_Alias__c.field-meta.xml
<CustomField>
    <fullName>RM_Alias__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RM Alias</label>
    <length>10</length>
    <type>Text</type>
</CustomField>