force-app/main/default/objects/Region_Alias__c/fields/Territory_Alias__c.field-meta.xml
<CustomField>
    <fullName>Territory_Alias__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Territory Alias</label>
    <length>10</length>
    <type>Text</type>
</CustomField>