force-app/main/default/objects/Region_Alias__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Territory_Alias__c</columns>
    <columns>RM_Alias__c</columns>
    <columns>Region__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>